View Issue Details

IDProjectCategoryView StatusLast Update
0025452Open CASCADEOCCT:WOKpublic2014-11-12 13:56
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityblock 
Status closedResolutionfixed 
Target Version6.8.0Fixed in Version6.8.0 
Summary0025452: TKCDLFront - CDLTranslate does not fill the list of dependencies (uses)
DescriptionWithin patch 0024724 two variables have been messed up - TheListOfGlobalUsed and TheListOfTypeUsed:
-  ListOfGlobalUsed() = aGlobalList;
-  ListOfTypeUsed()   = aTypeList;
+  TheListOfGlobalUsed = aGlobalList;
+  TheListOfGlobalUsed   = aTypeList;
TagsNo tags attached.
Test case number

Relationships

child of 0024724 closedkgv NT file routines in WOK use OSD_File::myFileChannel instead of myFileHandle 

Activities

kgv

2014-11-06 18:48

developer   ~0034128

The patch in branch CR25452 should fix the issue.

Issue History

Date Modified Username Field Change
2014-11-06 17:34 kgv New Issue
2014-11-06 17:34 kgv Assigned To => kgv
2014-11-06 17:34 kgv Description Updated
2014-11-06 17:34 kgv Relationship added child of 0024724
2014-11-06 18:48 kgv Note Added: 0034128
2014-11-06 18:48 kgv Assigned To kgv => bugmaster
2014-11-06 18:48 kgv Status new => resolved
2014-11-12 13:55 bugmaster Status resolved => reviewed
2014-11-12 13:56 bugmaster Status reviewed => closed
2014-11-12 13:56 bugmaster Resolution open => fixed
2014-11-12 13:56 bugmaster Fixed in Version => 6.8.0