0025452: TKCDLFront - CDLTranslate does not fill the list of dependencies (uses)