src/MS/MS_StdClass.cxx
@@ -10,17 +10,6 @@ MS_StdClass::MS_StdClass(const Handle(TCollection_HAsciiString)& aName,
     myComment        = new TCollection_HAsciiString("");
 }
 
-MS_StdClass::MS_StdClass(const Handle(TCollection_HAsciiString)& aName, 
-			 const Handle(TCollection_HAsciiString)& aPackage, 
-			 const Handle(TCollection_HAsciiString)& Mother, 
-			 const Standard_Boolean aPrivate, 
-			 const Standard_Boolean aDeferred, 
-			 const Standard_Boolean aInComplete) 
-: MS_Class(aName,aPackage,Mother,aPrivate,aDeferred,aInComplete), myNestingState(Standard_False)
-{
-    myComment        = new TCollection_HAsciiString("");
-}
-
 void MS_StdClass::Validity(const Handle(TCollection_HAsciiString)& , 
 			   const Handle(TCollection_HAsciiString)& ) const 
 {
